# eventd-events

./: .gitignore  Makefile.am  README.md  configure.ac
chat/: chat.action.in  chat.event
im/: im.action.in  im.event
po/: POTFILES.in  fr.po
presence/: presence-away-message.action.in  presence-away.action.in  presence-back-message.action.in  presence-back.action.in  presence-idle-back.action.in  presence-idle.action.in  presence-signed-off.action.in  presence-signed-on.action.in  presence.action.in  presence.event
transfer/: transfer-complete.action.in  transfer-error.action.in  transfer.action.in  transfer.event
